# leaderbot

./: .gitignore  .tokeignore  CONTRIBUTING.rst  MANIFEST.in  README.rst  TODO.rst  analyze_epochai.ipynb  blobs-to-remove.txt  bradlyterry.py  bradlyterry_scaled.py  bradlyterry_scaled_r.py  bradlyterry_scaled_rij.py  bradlyterry_scaled_stable.py  chatbotarena_20240814.json  davidson.py  davidson_scaled.py  davidson_scaled_r.py  davidson_scaled_rij.py  load_data.py  pyproject.toml  raokupper.py  raokupper_scaled.py  raokupper_scaled_r.py  raokupper_scaled_rij.py  requirements.txt  setup.cfg  todo  todo.rst  tox.ini  visualization.py
.github/workflows/: deploy-docs.yml
archive/: .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  bradlyterry_glicko.py  bradlyterry_scaled_r.py  chatbotarena_converter.py  davidson_scaled.py  davidson_scaled_r.py  evaluation.py  load_data.py  pyproject.toml  raokupper_scaled.py  requirements.txt  setup.py  strong_models.json
archive/archive/: .gitignore  bradlyterry_scaled.py  davidson_scaled_rij.py  raokupper_scaled_rij.py
archive/docs/: requirements.txt
archive/docs/source/: _inspect.py  api.rst  conf.py  contents.rst
archive/leaderbot/algorithms/: __init__.py  bradleyterry_scaled.py  bradleyterry_scaled_rij.py  davidson_scaled.py  davidson_scaled_r.py  davidson_scaled_rij.py  raokupper.py  raokupper_scaled.py  raokupper_scaled_rij.py
archive/leaderbot/data/: __init__.py
archive/notebooks/: Untitled.ipynb
benchmark/: leaderbot_mwe.py  leaderbot_mwe_1.py  leaderbot_mwe_2.py  leaderbot_mwe_3.py  train_all.py
docs/: requirements.txt
docs/source/: api.rst  cite.rst  conf.py  contents.rst  contribute.rst  custom_domain.py  index.rst  recursive_glob.py
leaderbot/: __init__.py  requirements.txt
leaderbot/_visualization/: __init__.py  _plot_cluster.py  _plot_map_distance.py  _plot_marginal_outcomes.py  _plot_match_matrix.py  _plot_scores.py
leaderbot/algorithms/: base_model.py  bradleyterry.py  bradleyterry_scaled_r.py  davidson.py  raokupper_scaled_r.py
leaderbot/data/: __init__.py  _util.py  chatbotarena_20240814.json  convert.py  load.py  load_data.py  sample_whitelist.py  split.py
leaderbot/evaluate/: __init__.py  (+6 more)
notebooks/: DCT-IV.ipynb  Fisher.ipynb  KPCA.ipynb  KPCA_MDS.ipynb  Kendall.ipynb  MWE.ipynb  Prediction.ipynb  Scores.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Viz_Cor.ipynb  analyze_epochai.ipynb  analyze_epochai_var.ipynb  bump_chart.ipynb  cluster.ipynb  data.ipynb  evaluate.ipynb  goodness_of_fit.ipynb  large_scale_ai_models.csv  marginal_probabilities.ipynb  match-matrix.ipynb  match-table.ipynb  match_count.ipynb  plot_scores.ipynb  positiveness.ipynb  rank-variability.ipynb  test_MWE.ipynb  test_visualization.ipynb  train_all.ipynb  visualization.ipynb
tests/: requirements.txt  test_algorithms.py  test_models.py
(+59 files in other folders)
