[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}
# optional-dependencies.lint = { file = ["requirements-lint.txt"] }
# optional-dependencies.test = { file = ["requirements-test.txt"] }

# [tool.setuptools.packages.find]
# where = ["."]  # list of folders that contain the packages (default ["."])
# include = []  # package names should match these glob patterns (default ["*"])
# exclude = []  # exclude packages matching these glob patterns (default empty)
# namespaces = false

[tool.ruff]
# Allow lines to be as long as 80.
line-length = 80

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    "G",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 80
SPACES_AROUND_POWER_OPERATOR = true

[tool.yapfignore]
ignore_patterns = []

[tool.codespell]
ignore-words-list = "dout, te, indicies, subtile, nin"
skip=[]

[tool.isort]
use_parentheses = true
skip_gitignore = true
# skip this file because isort conflicts with yapf
skip = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "skip"
exclude = []

[tool.ruff.flake8-bugbear]
extend-immutable-calls = []
